# advent-of-code

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: args.rs  lib.rs  main.rs  template.txt
src/commands/: download.rs  mod.rs  scaffold.rs  solve.rs
src/commands/utils/: aoc.rs  day.rs  file.rs  mod.rs  runner.rs
src/grid/: coordinate.rs  coordinate3d.rs  mod.rs  scored_item.rs  sparse.rs
src/misc/: mod.rs  parsing.rs  scored_item.rs
src/parsing/: mod.rs  sparse_grid.rs
