[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Victor Colomb"]
edition = "2021"
default-run = "advent_of_code"

[lib]
doctest = false

[dependencies]
aoc-client = "0.2.0"
chrono = "0.4.38"
clap = { version = "4.5.22", features=["derive", "env"] }
num = "0.4.3"
regex = "1.11.1"

[profile.test]
opt-level = 3
